--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "express": "^4.18.2",
     "express-jsdoc-swagger": "^1.8.0",
     "helmet": "^6.0.1",
+    "express-session": "^1.11.3",
     "jsonwebtoken": "^9.0.0",
+    "method-override": "^2.3.5",
+    "passport": ">= 0.0.0",
+    "passport-github2": "^0.1.12",
     "pg": "^8.9.0",
     "swagger-client": "^3.18.5"
   }
