--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jsdoc-swagger": "^1.8.0",
-    "helmet": "^6.0.1",
     "express-session": "^1.11.3",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "method-override": "^2.3.5",
+    "node-fetch": "^3.3.0",
     "passport": ">= 0.0.0",
     "passport-github2": "^0.1.12",
     "pg": "^8.9.0",
