--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jsdoc-swagger": "^1.8.0",
+    "express-session": "^1.17.3",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "passport": "^0.6.0",
+    "passport-github": "^1.1.0",
+    "passport-github2": "^0.1.12",
     "pg": "^8.9.0",
     "swagger-client": "^3.18.5"
   }
