--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "jsonwebtoken": "^9.0.0",
     "method-override": "^2.3.5",
     "node-fetch": "^3.3.0",
-    "passport": ">= 0.0.0",
-    "passport-github2": "^0.1.12",
+    "path": "^0.12.7",
     "pg": "^8.9.0",
     "swagger-client": "^3.18.5"
   }
