--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "method-override": "^2.3.5",
+    "morgan": "^1.10.0",
     "node-fetch": "^3.3.0",
     "path": "^0.12.7",
     "pg": "^8.9.0",
