--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "--------------------------------------------------------------------------------------------------------------------------------# DevBoard",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "dev": "DEBUG=* node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
