--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.0",
     "method-override": "^2.3.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.0",
     "path": "^0.12.7",
     "pg": "^8.9.0",
