--- a/package.json
+++ b/package.json
@@ -20,15 +20,12 @@
     "express": "^4.18.2",
     "express-jsdoc-swagger": "^1.8.0",
     "express-session": "^1.11.3",
-    "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "method-override": "^2.3.5",
-    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.0",
     "path": "^0.12.7",
     "pg": "^8.9.0",
-    "rss-parser": "^3.12.0",
-    "swagger-client": "^3.18.5"
+    "rss-parser": "^3.12.0"
   }
 }
