--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-jsdoc-swagger": "^1.8.0",
     "express-session": "^1.11.3",
+    "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
     "method-override": "^2.3.5",
     "multer": "^1.4.5-lts.1",
