--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-jsdoc-swagger": "^1.8.0",
     "express-session": "^1.11.3",
+    "jest": "^29.5.0",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
     "method-override": "^2.3.5",
@@ -27,6 +28,8 @@
     "node-fetch": "^3.3.0",
     "path": "^0.12.7",
     "pg": "^8.9.0",
-    "rss-parser": "^3.12.0"
+    "request": "^2.88.2",
+    "rss-parser": "^3.12.0",
+    "supertest": "^6.3.3"
   }
 }
